--- a/index.html
+++ b/index.html
@@ -25,7 +25,25 @@
             </div>
             </div>
         <div class="part2 section">
-            
+            <h2>Some random information</h2>
+            <div class="multiple_boxes">
+                <div class="box_text">
+                    <div class="box">Box Image(to be deleted)</div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="box_text">
+                    <div class="box">Box Image(to be deleted)</div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="box_text">
+                    <div class="box">Box Image(to be deleted)</div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="box_text">
+                    <div class="box">Box Image(to be deleted)</div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+            </div>
         </div>
         <div class="part3 section">
             
