--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
             </div>
         </div>
         <div class="part3 section">
-            
+            <p class="quote">This is an inspiring quote, or a testimonial from a customer. 
+                Maybe it's just filling up space or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p style="align-self: flex-end; font-weight: bold;">-Thor, God of Thunder</p>
         </div>
         <div class="part4 section">
             
