--- a/index.html
+++ b/index.html
@@ -51,7 +51,13 @@
             <p style="align-self: flex-end; font-weight: bold;">-Thor, God of Thunder</p>
         </div>
         <div class="part4 section">
-            
+            <div class="plate">
+                <div class="text_c2a">
+                    <p class="c2a">Call to action! It's time!</p>
+                    <p class="signup">Sign up for our products by clicking that button right over there!</p>
+                </div>
+                <button id="c2a">Sign up</button>
+            </div>
         </div>
     </body>
 </html>
