--- a/index.html
+++ b/index.html
@@ -59,5 +59,8 @@
                 <button id="c2a">Sign up</button>
             </div>
         </div>
+        <div class="footer">
+            <p class="footer_text">Copyright The Odin Project 2025</p>
+        </div>
     </body>
 </html>
