--- a/index.html
+++ b/index.html
@@ -25,22 +25,22 @@
             </div>
             </div>
         <div class="part2 section">
-            <h2>Some random information</h2>
+            <h2><strong>Some random information</strong></h2>
             <div class="multiple_boxes">
                 <div class="box_text">
-                    <div class="box">Box Image(to be deleted)</div>
+                    <div class="box"></div>
                     <p>this is some subtext under an illustration or image</p>
                 </div>
                 <div class="box_text">
-                    <div class="box">Box Image(to be deleted)</div>
+                    <div class="box"></div>
                     <p>this is some subtext under an illustration or image</p>
                 </div>
                 <div class="box_text">
-                    <div class="box">Box Image(to be deleted)</div>
+                    <div class="box"></div>
                     <p>this is some subtext under an illustration or image</p>
                 </div>
                 <div class="box_text">
-                    <div class="box">Box Image(to be deleted)</div>
+                    <div class="box"></div>
                     <p>this is some subtext under an illustration or image</p>
                 </div>
             </div>
